GNOME Bugzilla – Bug 572489
atk_text_get_range_extents should use g_return_if_fail
Last modified: 2013-12-10 17:03:22 UTC
Please describe the problem: Notice that in http://svn.gnome.org/viewvc/atk/trunk/atk/atktext.c?view=markup function atk_text_get_range_extents should use g_return_if_fail instead of just return, in this line: if (start_offset < 0 || start_offset >= end_offset) return; Besides, zeroing the Atk.TextRectangle in this case would be also friendlier for bindings. Steps to reproduce: Actual results: Expected results: Does this happen every time? Other information:
Created attachment 129119 [details] [review] patch
Created attachment 131396 [details] [review] new patch , missing ';'
[Mass-reassigning open atk bug reports for better trackability as requested in https://bugzilla.gnome.org/show_bug.cgi?id=653179 . PLEASE NOTE: If you have watched the previous assignee of this bug report as a workaround for actually getting notified of changes in atk bugs, you yourself will now have to add atk-maint@gnome.bugs to your watchlist at the bottom of https://bugzilla.gnome.org/userprefs.cgi?tab=email to keep watching atk bug reports in GNOME Bugzilla. Sorry for the noise: Feel free to filter for this comment in order to mass-delete the triggered bugmail.]
Review of attachment 131396 [details] [review]: Just committed adding a commit message. Thanks for the patch. Closing bug.