text: atk_text_get_range_extents should use g_return_if_fail

https://bugzilla.gnome.org/show_bug.cgi?id=572489